--- a/analysis/Passby_MANOVA_Analyses.Rmd
+++ b/analysis/Passby_MANOVA_Analyses.Rmd
@@ -14,9 +14,11 @@ output:
 <!-- This needs to be manually added to the second line of the html -->
 
 <!-- 
-TODO possibly:
-- Repeat all for onboard measurements
-- Use 2019 data in addition to 2018
+TODO:
+- Validate calculation of predvals from coefficients for manual calculation
+- Look at 95% confidence intervals instead of +- 1 standard error. SEM = s.d. / sqrt (n). 95% confidence interval at the level of individual observation is s.d. * 1.96, at the level of a mean value is s.e. * 1.96
+- Use 2019 data in addition to 2018 - Done
+- Delete LZFmax output - Done
 -->
 
 ```{r setup, include=FALSE}
@@ -123,9 +125,11 @@ kable(Feq_summary,
 
 ```
 
-# MANOVA Analysis with LZFeq
+# 2018 MANOVA Analysis with LZFeq
 
 ```{r manova_1 with LZFeq}
+
+LZFeq_l_19 = filter(LZFeq_l, Year !="2018") # Save a 2016 to 2019 comparison data set
 
 LZFeq_l = filter(LZFeq_l, Year !="2019")
 
@@ -406,42 +410,38 @@ ggplotly(ribbon_plot)
   
 ```
 
-# MANOVA Analysis with LZFMax
 
-```{r manova with LZFMax_l}
-LZFMax_l = filter(LZFMax_l, Year !="2019")
 
-# Feq.man.macro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
-#                         X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
-#                         X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
-#                     macro_treatment + pavetemp*speed + Year, data = LZFMax_l)
-# summary(Feq.man.macro)
 
-# Feq.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
-#                         X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
-#                         X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
-#                       treatment + pavetemp * speed, data = LZFMax_l)
-# summary(Feq.man.micro)
+# 2019 MANOVA Analysis with LZFeq
 
-Fmax.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
+```{r manova_2019 with LZFeq}
+
+LZFeq_l = LZFeq_l_19 # Over-write the 2018 version for use with the same code here.
+
+Feq.man.micro2 <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
                         X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
                         X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
-                      treatment + pavetemp * speed + treatment:speed, data = LZFMax_l)
+                      treatment + pavetemp * speed + treatment:speed, data = LZFeq_l)
 
-micro.coeff = coefficients(Fmax.man.micro)
+micro.coeff = coefficients(Feq.man.micro2)
+```
 
-summary(Fmax.man.micro)
+For the 2016 to 2016 comparison, all predictore remained significant, except that the interaction between pavement temperature and speed became only marginally significant (p = 0.058). The variable is retained here for comparison with the previous analysis of 2016 to 2018 data.
+
+```{r overall summary 2019}
+summary(Feq.man.micro2)
 
 ```
 
-```{r manova_post_hoc with LZFMax_l}
-LZFMax_l = filter(LZFMax_l, Year != "2019")
+```{r manova_post_hoc with LZFeq 2019}
+LZFeq_l = filter(LZFeq_l, Year != "2018")
 
-LZFMax.aov.results = vector()
-LZFMax.aov.stderr = vector()
+LZFeq.aov.results = vector()
+LZFeq.aov.stderr = vector()
 frequencies = vector()
-LZFMax.aov.predvals = vector()
-LZFMax.aov.predse = vector()
+LZFeq.aov.predvals = vector()
+LZFeq.aov.predse = vector()
 
 # Creating 'standardized' values using predict. This evens out the pavetemp and speed to a uniform comparison
 pt = 90
@@ -451,60 +451,59 @@ pred_frame = expand.grid(treatment = unique(LZFeq_l$treatment),
                          speed = sp,
                          pavetemp = pt)
 
-for (freq in names(LZFMax_l[18:43])){
-  # freq = names(LZFMax_l[18])
-  an.results = lm(LZFMax_l[[freq]] ~ treatment * speed + pavetemp * speed, data = LZFMax_l)
+
+for (freq in names(LZFeq_l[18:43])){
+  # freq = names(LZFeq_l[18])
+  an.results = lm(LZFeq_l[[freq]] ~ treatment * speed + pavetemp * speed, data = LZFeq_l)
   
   frequencies = rbind(frequencies, c(as.numeric(substr(freq, 2, nchar(freq)))))
-  LZFMax.aov.results = rbind(LZFMax.aov.results, coef(an.results))
-  LZFMax.aov.stderr = rbind(LZFMax.aov.stderr, coef(summary(an.results))[,"Std. Error"])
+  LZFeq.aov.results = rbind(LZFeq.aov.results, coef(an.results))
+  LZFeq.aov.stderr = rbind(LZFeq.aov.stderr, coef(summary(an.results))[,"Std. Error"])
   
   # Predict 
   pred = predict(an.results, pred_frame, se.fit = T, interval = 'none')
-  LZFMax.aov.predvals = rbind(LZFMax.aov.predvals, pred$fit)
-  LZFMax.aov.predse = rbind(LZFMax.aov.predse, pred$se.fit)  
+  LZFeq.aov.predvals = rbind(LZFeq.aov.predvals, pred$fit)
+  LZFeq.aov.predse = rbind(LZFeq.aov.predse, pred$se.fit)  
   
 }
 
-LZFMax.aov.results = data.frame(LZFMax.aov.results)
-LZFMax.aov.results = cbind(frequency = frequencies, LZFMax.aov.results)
+LZFeq.aov.results = data.frame(LZFeq.aov.results)
+LZFeq.aov.results = cbind(frequency = frequencies, LZFeq.aov.results)
 
-LZFMax.aov.stderr = data.frame(LZFMax.aov.stderr)
-LZFMax.aov.stderr = cbind(frequency = frequencies, LZFMax.aov.stderr)
+LZFeq.aov.stderr = data.frame(LZFeq.aov.stderr)
+LZFeq.aov.stderr = cbind(frequency = frequencies, LZFeq.aov.stderr)
 
-LZFMax.aov.predvals = data.frame(LZFMax.aov.predvals)
-names(LZFMax.aov.predvals) = pred_frame$treatment
-LZFMax.aov.predvals = cbind(frequency = frequencies, LZFMax.aov.predvals)
+LZFeq.aov.predvals = data.frame(LZFeq.aov.predvals)
+names(LZFeq.aov.predvals) = pred_frame$treatment
+LZFeq.aov.predvals = cbind(frequency = frequencies, LZFeq.aov.predvals)
 
-LZFMax.aov.predse = data.frame(LZFMax.aov.predse)
-names(LZFMax.aov.predse) = pred_frame$treatment
-LZFMax.aov.predse = cbind(frequency = frequencies, LZFMax.aov.predse)
+LZFeq.aov.predse = data.frame(LZFeq.aov.predse)
+names(LZFeq.aov.predse) = pred_frame$treatment
+LZFeq.aov.predse = cbind(frequency = frequencies, LZFeq.aov.predse)
 
 # Write output to files
-names(LZFMax.aov.results)[grep('Intercept', names(LZFMax.aov.results))] = 'Baseline'
-names(LZFMax.aov.stderr)[grep('Intercept', names(LZFMax.aov.stderr))] = 'Baseline'
+names(LZFeq.aov.results)[grep('Intercept', names(LZFeq.aov.results))] = 'Baseline'
+names(LZFeq.aov.stderr)[grep('Intercept', names(LZFeq.aov.stderr))] = 'Baseline'
 
-write.csv(LZFMax.aov.results, file.path(rootdir, 'LZFMax_ANOVA_Coefficients.csv'), row.names = F)
-write.csv(LZFMax.aov.stderr, file.path(rootdir, 'LZFMax_ANOVA_StdErr.csv'), row.names = F)
+write.csv(LZFeq.aov.results, file.path(rootdir, 'LZFeq_ANOVA_Coefficients_2019.csv'), row.names = F)
+write.csv(LZFeq.aov.stderr, file.path(rootdir, 'LZFeq_ANOVA_StdErr_2019.csv'), row.names = F)
 
-write.csv(LZFMax.aov.predvals, file.path(rootdir, 'LZFMax_ANOVA_PredictedVals.csv'), row.names = F)
-write.csv(LZFMax.aov.predse, file.path(rootdir, 'LZFMax_ANOVA_PredictedVals_StdErr.csv'), row.names = F)
-```
+write.csv(LZFeq.aov.predvals, file.path(rootdir, 'LZFeq_ANOVA_PredictedVals_2019.csv'), row.names = F)
+write.csv(LZFeq.aov.predse, file.path(rootdir, 'LZFeq_ANOVA_PredictedVals_StdErr_2019.csv'), row.names = F)
 
+``` 
 
-## Post-hoc ANOVAs by LZFMax Frequency
+## Post-hoc ANOVAs by LZFeq Frequency
 
-Plotting ANOVA coefficients of change in sound intensity from pretreatment for LZFMax
+Plotting ANOVA change in sound intensity from pre-treatment for LZFeq, comparing 2019 measurements to 2016. 
 
-Predictors: Treatment type, pavement temperature, and speed. Treatment x speed and pavement temperature x speed are included as predictors.
+```{r plotting_change_LZFeq 2019, fig.height = 20, fig.width = 15}
 
-```{r plotting_change_LZFMax, fig.height = 20, fig.width = 15}
-
-y_range = c(-12, 10)
+y_range = c(-10, 10)
 
 # Use predvals. Subtract from baseline to show difference.
-predvals = LZFMax.aov.predvals
-predse = LZFMax.aov.predse
+predvals = LZFeq.aov.predvals
+predse = LZFeq.aov.predse
 
 predvals[,3:6] = predvals[,3:6] - predvals[,2]
 
@@ -513,9 +512,9 @@ CS_1.4_col = c()
 CS_1.4_col = ifelse(abs(predvals$X1.4in.Chip.Seal) > predse$X1.4in.Chip.Seal,
        ifelse(predvals$X1.4in.Chip.Seal < 0, "blue", "red"),"gray")
 
-# Plot LZFMax 1/4in Chip Seal.
+# Plot LZFeq 1/4in Chip Seal.
 # Since now we are including interaction between speed and treatment, also add the coefficient for the treatment at 50 mph
-LZFMax_Chip.Seal.1.4 = ggplot()+
+LZFeq_Chip.Seal.1.4 = ggplot()+
   geom_pointrange(data = predvals,
                   aes(x = frequency,
                       y = X1.4in.Chip.Seal,
@@ -526,7 +525,7 @@ LZFMax_Chip.Seal.1.4 = ggplot()+
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
-  labs(title = "LZFMax ANOVA 1/4in Chip Seal Coefficients", 
+  labs(title = "LZFeq ANOVA 1/4in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
        y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0) +
@@ -537,8 +536,8 @@ CS_3.8_col = c()
 CS_3.8_col = ifelse(abs(predvals$X3.8in.Chip.Seal) > predse$X3.8in.Chip.Seal,
        ifelse(predvals$X3.8in.Chip.Seal < 0, "blue", "red"),"gray")
 
-#Plot LZFMax 3/8 in chip seal
-LZFMax_Chip.Seal.3.8 = ggplot()+
+#Plot LZFeq 3/8 in chip seal
+LZFeq_Chip.Seal.3.8 = ggplot()+
   geom_pointrange(data = predvals, 
                   aes(x = frequency,
                       y = X3.8in.Chip.Seal,
@@ -549,7 +548,7 @@ LZFMax_Chip.Seal.3.8 = ggplot()+
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
-  labs(title = "LZFMax ANOVA 3/8in Chip Seal Coefficients", 
+  labs(title = "LZFeq ANOVA 3/8in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
        y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
@@ -560,8 +559,8 @@ TII_Micro_col = c()
 TII_Micro_col = ifelse(abs(predvals$Type.II.Microsurfacing)>predse$Type.II.Microsurfacing,
        ifelse(predvals$Type.II.Microsurfacing<0, "blue", "red"),"gray")
 
-#Plot LZFMax type II microsurfacing
-LZFMax_Microsurfacing.II = ggplot()+
+#Plot LZFeq type II microsurfacing
+LZFeq_Microsurfacing.II = ggplot()+
   geom_pointrange(data = predvals,
                   aes(x = frequency, 
                   y = Type.II.Microsurfacing,
@@ -572,7 +571,7 @@ LZFMax_Microsurfacing.II = ggplot()+
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
-  labs(title = "LZFMax ANOVA Type II Microsurfacing Coefficients", 
+  labs(title = "LZFeq ANOVA Type II Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
        y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
@@ -583,8 +582,8 @@ TIII_Micro_col = c()
 TIII_Micro_col = ifelse(abs(predvals$Type.III.Microsurfacing)>predse$Type.III.Microsurfacing,
        ifelse(predvals$Type.III.Microsurfacing<0, "blue", "red"),"gray")
 
-#Plot LZFMax Type III microsurfacing
-LZFMax_Microsurfacing.III = ggplot()+
+#Plot LZFeq Type III microsurfacing
+LZFeq_Microsurfacing.III = ggplot()+
   geom_pointrange(data = predvals,
                   aes(x = frequency, 
                   y = Type.III.Microsurfacing,
@@ -595,15 +594,76 @@ LZFMax_Microsurfacing.III = ggplot()+
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
-  labs(title = "LZFMax ANOVA Type III Microsurfacing Coefficients", 
+  labs(title = "LZFeq ANOVA Type III Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
        y = "Change in Sound Intensity \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(y_range[1], y_range[2])
 
 #Arrange plots in grid
-grid.arrange(LZFMax_Chip.Seal.1.4,LZFMax_Chip.Seal.3.8,LZFMax_Microsurfacing.II, LZFMax_Microsurfacing.III, nrow = 4)
+grid.arrange(LZFeq_Chip.Seal.1.4,LZFeq_Chip.Seal.3.8,LZFeq_Microsurfacing.II, LZFeq_Microsurfacing.III, nrow = 4)
 
 ```
 
+## Plotting standardized curves
+
+The following shows the predicted sound intensity levels at standardized pavement temperature (90 degrees) and vehicle speed (50 mph). Two versions are shown, a point plot and a 'ribbon plot'. Both show the predicted values, +/- 1 standard error. 
+
+These plot are interactive (static versions can be made as well); clicking on the legend will show or hide a specific treatment.
+
+```{r plotting_curves_LZFeq 2019, fig.height = 8, fig.width = 10}
+
+# Use predvals
+predvals = LZFeq.aov.predvals
+predse = LZFeq.aov.predse
+
+predvals = gather(predvals, key = 'treatment', value = 'LZFeq',
+                  baseline_chipseal, X3.8in.Chip.Seal, X1.4in.Chip.Seal, Type.II.Microsurfacing, Type.III.Microsurfacing)
+
+predse = gather(predse, key = 'treatment', value = 'SE',
+                  baseline_chipseal, X3.8in.Chip.Seal, X1.4in.Chip.Seal, Type.II.Microsurfacing, Type.III.Microsurfacing)
+
+predvals = left_join(predvals, predse)
+
+# Plot 
+
+point_plot <- ggplot(predvals, aes(x = frequency,
+                     y = LZFeq,
+                     color = treatment)) +
+  geom_pointrange(aes(ymin = LZFeq - SE,
+                      ymax = LZFeq + SE), 
+                      size = 1) +
+  # geom_smooth() + 
+  geom_line() + 
+  theme_bw(base_line_size = 1,
+           base_size = 15) +
+  scale_x_log10() +
+  labs(title = "LZFeq at constant pavement temperature and speed by treatment, 2019", 
+       x = "Frequency (Hz)", 
+       y = "Sound Intensity (dB)")
+
+ggplotly(point_plot)
+
+# Ribbons
+ribbon_plot <- ggplot(predvals, aes(x = frequency,
+                     y = LZFeq,
+                     color = treatment)) +
+  geom_ribbon(aes(ymin = LZFeq - SE,
+              ymax = LZFeq + SE, 
+              fill = treatment,
+              color = NULL),
+              alpha = 0.3) +
+    geom_line() + 
+
+  theme_bw(base_line_size = 1,
+           base_size = 15) +
+  scale_x_log10() +
+  labs(title = "LZFeq at constant pavement temperature and speed by treatment, 2019", 
+       x = "Frequency (Hz)", 
+       y = "Sound Intensity (dB)")
+
+ggplotly(ribbon_plot)
+
+  
+```
 
