--- a/analysis/Passby_MANOVA_Analyses.Rmd
+++ b/analysis/Passby_MANOVA_Analyses.Rmd
@@ -704,24 +704,40 @@ ggplotly(ribbon_plot)
 
 LZFeq_l_21 = filter(LZFeq_l, Year %in% c("2016", "2021")) # Save a 2016 to 2021 comparison dataset
 
+### model selection:
+## conduct partial F test of full model with all predictors against concise models with fewer predictors
+## (pavetemp:treatment interaction not possible because one site had constant pavetemp)
+full.model = manova(cbind(X50, X63, X80,X100,X125,X160,X200,X250,X315,X400,X500,
+                     X630,X800,X1000,X1250,X1600,X2000,X2500,X3150,X4000) ~ treatment + speed +  pavetemp + pavetemp:speed + treatment:speed, data = LZFeq_l_21)
 
-LZFeq.man.microtreatment2 <- manova(cbind(X50, X63, X80,X100,X125,X160,X200,X250,X315,X400,X500,
-                        X630,X800,X1000,X1250,X1600,X2000,X2500,X3150,X4000)~
-                      treatment + pavetemp * speed + treatment:speed, data = LZFeq_l_21)
+no.interactions = manova(cbind(X50, X63, X80,X100,X125,X160,X200,X250,X315,X400,X500,
+                      X630,X800,X1000,X1250,X1600,X2000,X2500,X3150,X4000) ~ treatment + speed + pavetemp, data = LZFeq_l_21)
 
-microtreatment.coeff = coefficients(LZFeq.man.microtreatment2)
+#anova(full.model,no.interactions) # partial F-stat is significant, thus the no.interactions model leaves variance unexplained
+
+treatment.speed = manova(cbind(X50, X63, X80,X100,X125,X160,X200,X250,X315,X400,X500,
+                     X630,X800,X1000,X1250,X1600,X2000,X2500,X3150,X4000) ~ treatment + speed + pavetemp + treatment:speed, data = LZFeq_l_21)
+
+#anova(full.model,treatment.speed) # partial F-stat is significant, thus the treatment.speed model leaves variance unexplained
+
+speed.pavetemp = manova(cbind(X50, X63, X80,X100,X125,X160,X200,X250,X315,X400,X500,
+                    X630,X800,X1000,X1250,X1600,X2000,X2500,X3150,X4000) ~ treatment + speed + pavetemp+ pavetemp:speed, data = LZFeq_l_21)
+
+#anova(full.model,speed.pavetemp) # partial F-stat is significant, thus the speed.pavetemp model leaves variance unexplained
+
+final.model = full.model # all concise models had significant partial F-statistics, therefore the full model is the best model
+
+finalmodel.coeff = coefficients(final.model)
 ```
 
-The table shows the summary of the statistical test for the difference in sound pressure level (LZFeq) across all 1/3 octave bands attributable to each of the predictors: pavement temperature, speed, surface treatment, and the statistical interactions between temperature and speed, and between surface treatment and speed. Note that only 1/3 octave bands from 50 Hz to 4 kHz were included in this analysis. The high frequency analysis limit is due to the internal noise floor of the measurement equipment, which results in poor signal to noise ratio at high frequencies in areas with low ambient noise, such as Death Valley.
+The table shows the summary of the statistical test for the difference in sound pressure level (LZFeq) across all 1/3 octave bands attributable to each of the predictors: surface treatment, vehicle speed, pavement temperature, and the statistical interaction between vehicle speed and pavement temperature, as well as the interaction between surface treatment and vehicle speed . Note that only 1/3 octave bands from 50 Hz to 4 kHz were included in this analysis. The high frequency analysis limit is due to the internal noise floor of the measurement equipment, which results in poor signal to noise ratio at high frequencies in areas with low ambient noise, such as Death Valley.
 
 Pillai's trace, shown in the third column of the table, is a test statistic used in multivariate analyses. It is based on the eigenvalues associated with each predictor, across all 1/3 octave bands. A larger Pillai's value indicates that the predictor explains more of the difference in the response data (the matrix of all 1/3 octave band LZFeq values). In order to interpret the statistical significance of this test statistic, we examine the p-value. The p-value represents whether the test statistic is larger than expected by chance. For this analysis, a p-value less than 0.05 is considered statistically significant.
 
-Using MANOVA, we see that there are strong effects of some predictors on the noise levels across the frequency spectra. All predictors were statistically significant at a level of $\alpha$=0.05, except for the interactive effect of speed and temperature, as the p-value of Pillai's test statistic is greater than 0.05. Speed and surface treatment are the strongest independent predictors of noise, as they both have large Pillai values with corresponding p-values less than 0.001.
+Using MANOVA, we see that there are strong effects of most predictors on the noise levels across the frequency spectra. All predictors are statistically significant at a level of $\alpha$=0.05, except for the interactive effect of vehicle speed and pavement temperature, as the p-value of Pillai’s test statistic is greater than 0.05. Surface treatment and vehicle speed are the strongest independent predictors of noise, as they both have large Pillai values with corresponding p-values less than 0.001.
  
 ```{r overall summary 2021}
-#summary(LZFeq.man.microtreatment2)
-
-sum_2021 <- summary(LZFeq.man.microtreatment2)
+sum_2021 <- summary(final.model)
 
 sum_2021$stats[,2] <- round(sum_2021$stats[,2], 3)
 sum_2021$stats[,3] <- round(sum_2021$stats[,3], 3)
@@ -757,7 +773,7 @@ pred_frame = expand.grid(treatment = unique(LZFeq_l_21$treatment),
 
 
 for (freq in names(LZFeq_l_21[17:36])){
-  an.results = lm(LZFeq_l_21[[freq]] ~ treatment * speed + pavetemp * speed, data = LZFeq_l_21)
+  an.results = lm(LZFeq_l_21[[freq]]  ~ treatment + speed +  pavetemp + pavetemp:speed + treatment:speed, data = LZFeq_l_21)
   
   OneThirdOBs = rbind(OneThirdOBs, c(as.numeric(substr(freq, 2, nchar(freq)))))
   LZFeq.aov.results = rbind(LZFeq.aov.results, coef(an.results))
@@ -797,9 +813,9 @@ write.csv(LZFeq.aov.predse, file.path(rootdir, 'LZFeq_2021_ANOVA_PredictedVals_S
 ``` 
 ## Post-hoc ANOVAs by LZFeq Frequency
 
-The below plots illustrate the current difference in spectral LZFeq from pre-treatment, after three years of use. The plots are generated from the output of the statistical models, holding pavement temperature constant at 90 degrees and speed constant at 50 mph. The change in LZFeq is calculated as the difference between the predicted sound levels at 90 degrees and 50 mph for a particular treatment, compared to the baseline pavement conditions in 2016 in the same conditions. The error bars are the standard errors for predicted LZFeq values. The predicted values at these conditions are saved as `LZFeq_2019_ANOVA_PredictedVals.csv` and `LZFeq_2019_ANOVA_PredictedVals_StdErr.csv`
+The below plots illustrate the current difference in spectral LZFeq from pre-treatment, after three years of use. The plots are generated from the output of the statistical models based on 2021 measured data, holding vehicle speed constant at 50 mph and pavement temperature constant at 90 degrees Fahrenheit to normalize the measured data for facilitation of direct comparison of surface treatments. The change in LZFeq after three years is calculated as the difference between the predicted sound levels at 50 mph and 90 deg F for a particular treatment in 2021, compared to the baseline pavement conditions in 2016 under the same vehicle speed and pavement temperature conditions. The error bars are the standard errors for predicted LZFeq values. The predicted values at these conditions are saved as `LZFeq_2021_ANOVA_PredictedVals.csv` and `LZFeq_2021_ANOVA_PredictedVals_StdErr.csv`
 
-After three years, the 3/8" chip seal pavement attenuates more high frequency content but less mid frequency content than the pre-treatment, older 3/8" chip seal pavement. Similar to the results after one year, the type III microsurfacing still attenuates less low frequency content than the pre-treatment pavement after three years of use.
+After three years, the 3/8" chip seal pavement attenuates more high frequency content but less mid frequency content than the pre-treatment, older 3/8" chip seal pavement. Similar to the results after one year, the type III microsurfacing after three years of use still attenuates less low frequency content than the pre-treatment pavement baseline.
 
 ```{r plotting_change_LZFeq 2021, fig.height = 20, fig.width = 15}
 
@@ -829,7 +845,7 @@ LZFeq_Chip.Seal.1.4 = ggplot()+
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
-  labs(title = 'Three Years LZFeq ANOVA 1/4" Chip Seal Coefficients', 
+  labs(title = 'Three-Year LZFeq ANOVA 1/4" Chip Seal Difference from Pre-treatment', 
        x = "Frequency (Hz)", 
        y = "LZFeq Difference \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0) +
@@ -852,7 +868,7 @@ LZFeq_Chip.Seal.3.8 = ggplot()+
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
-  labs(title = 'Three Years LZFeq ANOVA 3/8" Chip Seal Coefficients', 
+  labs(title = 'Three-Year LZFeq ANOVA 3/8" Chip Seal Difference from Pre-treatment', 
        x = "Frequency (Hz)", 
        y = "LZFeq Difference \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
@@ -875,7 +891,7 @@ LZFeq_Microsurfacing.II = ggplot()+
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
-  labs(title = "Three Years LZFeq ANOVA Type II Microsurfacing Coefficients", 
+  labs(title = "Three-Year LZFeq ANOVA Type II Microsurfacing Difference from Pre-treatment", 
        x = "Frequency (Hz)", 
        y = "LZFeq Difference \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
@@ -898,7 +914,7 @@ LZFeq_Microsurfacing.III = ggplot()+
   theme_bw(base_line_size = 1,
            base_size = 20)+
   scale_x_log10()+
-  labs(title = "Three Years LZFeq ANOVA Type III Microsurfacing Coefficients", 
+  labs(title = "Three-Year LZFeq ANOVA Type III Microsurfacing Difference from Pre-treatment", 
        x = "Frequency (Hz)", 
        y = "LZFeq Difference \nfrom Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
@@ -911,7 +927,7 @@ grid.arrange(LZFeq_Chip.Seal.1.4,LZFeq_Chip.Seal.3.8,LZFeq_Microsurfacing.II, LZ
 
 ## Plotting standardized curves
 
-The following shows the predicted LZFeq values at standardized pavement temperature (90 degrees) and vehicle speed (50 mph). Two versions are shown, a point plot and a 'ribbon plot'. Both show the predicted values, +/- 1 standard error. 
+The following shows the predicted LZFeq values at standardized vehicle speed (50 mph) and pavement temperature (90 deg F). Two versions are shown, a point plot and a 'ribbon plot'. Both show the predicted values, +/- 1 standard error. 
 
 The second plot is interactive; clicking on the legend will show or hide a specific treatment.
 
@@ -941,7 +957,7 @@ point_plot <- ggplot(predvals, aes(x = frequency,
   theme_bw(base_line_size = 1,
            base_size = 15) +
   scale_x_log10() +
-  labs(title = "Three Years LZFeq by Surface Treatment \nat 90 deg F pavement temperature and 50 mph speed", 
+  labs(title = "Three-Year LZFeq by Surface Treatment \nat 50mph vehicle speed & 90degF pavement temp", 
        x = "Frequency (Hz)", 
        y = "LZFeq (dB)")
 
@@ -961,7 +977,7 @@ ribbon_plot <- ggplot(predvals, aes(x = frequency,
   theme_bw(base_line_size = 1,
            base_size = 15) +
   scale_x_log10() +
-  labs(title = "Three Years LZFeq by Surface Treatment \nat 90 deg F pavement temperature and 50 mph speed", 
+  labs(title = "Three-Year LZFeq by Surface Treatment \nat 50mph vehicle speed & 90degF pavement temp", 
        x = "Frequency (Hz)", 
        y = "LZFeq (dB)")
 
