updated Rmarkdown text to explain interpretation of statistics

--- a/analysis/Passby_MANOVA_Analyses.Rmd
+++ b/analysis/Passby_MANOVA_Analyses.Rmd
@@ -730,11 +730,11 @@ final.model = full.model # all concise models had significant partial F-statisti
 finalmodel.coeff = coefficients(final.model)
 ```
 
-The table shows the summary of the statistical test for the difference in sound pressure level (LZFeq) across all 1/3 octave bands attributable to each of the predictors: surface treatment, vehicle speed, pavement temperature, and the statistical interaction between vehicle speed and pavement temperature, as well as the interaction between surface treatment and vehicle speed . Note that only 1/3 octave bands from 50 Hz to 4 kHz were included in this analysis. The high frequency analysis limit is due to the internal noise floor of the measurement equipment, which results in poor signal to noise ratio at high frequencies in areas with low ambient noise, such as Death Valley.
+Measured data can be affected by vehicle speed, pavement type, pavement temperature, and the interactions between these main effects. In order to further isolate the effect of pavement type, a Multiple Analysis of Variance (MANOVA) was conducted using measurements from the pre-treatment and post-treatment conditions. The predictors in the MANOVA include the surface treatment, vehicle speed, and pavement temperature. The response variables are the one-third octave band levels associated with the pass-by for each event. In contrast to an ANOVA model, the response in the statistical model is a matrix (number of observations × number of one-third octave bands as response variables) rather than a single vector (number of observations × 1 response variable). This analysis allows the greatest amount of data to be utilized in order to isolate the contribution of pavement type on the difference in measured levels.
 
-Pillai's trace, shown in the third column of the table, is a test statistic used in multivariate analyses. It is based on the eigenvalues associated with each predictor, across all 1/3 octave bands. A larger Pillai's value indicates that the predictor explains more of the difference in the response data (the matrix of all 1/3 octave band LZFeq values). In order to interpret the statistical significance of this test statistic, we examine the p-value. The p-value represents whether the test statistic is larger than expected by chance. For this analysis, a p-value less than 0.05 is considered statistically significant.
+The table (Table 5 in the 3-year measurement report) shows the summary of the MANOVA statistical test for the difference in sound pressure level (LZFeq) across all 1/3 octave bands attributable to each of the predictors. Note that only 1/3 octave bands from 50 Hz to 4 kHz were included in this analysis. The high frequency analysis limit is due to the internal noise floor of the measurement equipment, which results in poor signal to noise ratio at high frequencies in areas with low ambient noise, such as Death Valley. The first column in the table displays the parameters being evaluated for their impact on the matrix of LZFeq 1/3 octave band data measured for each passby. The parameters being evaluated in this data set include either a main effect (surface treatment, vehicle speed, and pavement temperature) or an interaction effect (statistical interaction between vehicle speed and pavement temperature, as well as the interaction between surface treatment and vehicle speed). The second column shows the number of degrees of freedom associated with each parameter, which indicates the number of unique options that can vary. The third column is an estimate of Pillai’s trace, which is a test statistic used in multivariate analyses to evaluate the predictive power of each parameter. A larger Pillai’s value indicates that the parameter is responsible for a greater portion of the difference in spectral LZFeq observed between each passby. In order to interpret the statistical significance of this test statistic, we examine the p-value, which is shown in the final column of the table. For this analysis, a p-value less than 0.05 is considered statistically significant. This threshold corresponds to a 95% likelihood that the measured differences in LZFeq data for each passby are attributable to the predictor variable, and did not occur simply by chance. The other columns in the table display the approximate F-statistic, (another means of evaluating the statistical significance of predictor variables in which a higher value indicates a greater impact on the response data), and the degrees of freedom for the numerator and denominator in the F-statistics.
 
-Using MANOVA, we see that there are strong effects of most predictors on the noise levels across the frequency spectra. All predictors are statistically significant at a level of $\alpha$=0.05, except for the interactive effect of vehicle speed and pavement temperature, as the p-value of Pillai’s test statistic is greater than 0.05. Surface treatment and vehicle speed are the strongest independent predictors of noise, as they both have large Pillai values with corresponding p-values less than 0.001.
+The MANOVA indicates that there are strong, statistically significant effects on the noise levels across the frequency spectra for most predictors included in the analysis. All predictors are statistically significant at a level of $\alpha$=0.05 except for the interactive effect of vehicle speed and pavement temperature, as the p-value of Pillai’s test statistic is greater than 0.05. Surface treatment and vehicle speed are the strongest independent predictors of noise, as they both have large Pillai values with corresponding p-values less than 0.001. The latter can be interpreted as a greater than 99% chance that the LZFeq difference measured between passbys can be confidently attributed to surface treatment and vehicle speed.
  
 ```{r overall summary 2021}
 sum_2021 <- summary(final.model)
@@ -813,9 +813,14 @@ write.csv(LZFeq.aov.predse, file.path(rootdir, 'LZFeq_2021_ANOVA_PredictedVals_S
 ``` 
 ## Post-hoc ANOVAs by LZFeq Frequency
 
-The below plots illustrate the current difference in spectral LZFeq from pre-treatment, after three years of use. The plots are generated from the output of the statistical models based on 2021 measured data, holding vehicle speed constant at 50 mph and pavement temperature constant at 90 degrees Fahrenheit to normalize the measured data for facilitation of direct comparison of surface treatments. The change in LZFeq after three years is calculated as the difference between the predicted sound levels at 50 mph and 90 deg F for a particular treatment in 2021, compared to the baseline pavement conditions in 2016 under the same vehicle speed and pavement temperature conditions. The error bars are the standard errors for predicted LZFeq values. The predicted values at these conditions are saved as `LZFeq_2021_ANOVA_PredictedVals.csv` and `LZFeq_2021_ANOVA_PredictedVals_StdErr.csv`
+Once the statistical significance of the MANOVA was established, it was appropriate to conduct single Analyses of Variance (ANOVAs) for each one-third octave band frequency using this model to determine the effects of each parameter on sound level. 
 
-After three years, the 3/8" chip seal pavement attenuates more high frequency content but less mid frequency content than the pre-treatment, older 3/8" chip seal pavement. Similar to the results after one year, the type III microsurfacing after three years of use still attenuates less low frequency content than the pre-treatment pavement baseline.
+The below plots (figures 31-24 in the three-year report) illustrate the current difference in spectral LZFeq from pre-treatment, after three years of use. The plots are generated from the output of the ANOVA models based on 2021 measured data, holding vehicle speed constant at 50 mph and pavement temperature constant at 90 degrees Fahrenheit to normalize the measured data for facilitation of direct comparison of surface treatments. The change in LZFeq after three years is calculated as the difference between the predicted sound levels at 50 mph and 90 deg F for a particular treatment in 2021, compared to the baseline pavement conditions in 2016 under the same vehicle speed and pavement temperature conditions. The predicted values and standard errors at these conditions are saved as `LZFeq_2021_ANOVA_PredictedVals.csv` and `LZFeq_2021_ANOVA_PredictedVals_StdErr.csv`
+
+Note that in these figures the error bars are based on ± 1 standard error, which provides a confidence interval of 68.3%, rather than the typical ± 1.96 standard errors, which provides a 95% confidence interval. This was done to help highlight potential differences. Because this interval is less conservative, as new data are added, some trends may change. From these figures, the following conclusions can be drawn:
+
+- The 3/8" chip seal pavement attenuates more high frequency content but less mid frequency content than the pre-treatment, older 3/8" chip seal pavement.
+- Similar to the results after one year, the type III microsurfacing after three years of use still attenuates less low frequency content than the pre-treatment pavement baseline.
 
 ```{r plotting_change_LZFeq 2021, fig.height = 20, fig.width = 15}
 
